--- a/index.html
+++ b/index.html
@@ -3,28 +3,24 @@
 <head>
   <title>About me!</title>
   <style>
-    body {
-      background-color: rgb(62, 62, 182);
-    }
-    
+  
     #bio {
-        color: green;
-        border:2px solid black;
-      border-radius: 5px;
-      width: 400px;
-      margin: 50px auto;
+      color:darkolivegreen;
+      border:2px solid black;
+      border-radius:30px;
+      width: 900px;
+      margin: 20px auto;
       padding: 20px;
     }
   </style>
 </head>
 <body>
   <div id="bio">
-    <h1>Revanth Challa</h1>
+    <h1 style="color: blue;text-align: center;">Hey,Welcome to my Page!!</h1>
     <p>
-      My name is Revanth Challa. I have a Masters degree in CIS from New England College,NH 
-      and a Btech degree in ECE from CMRCET,India. 
+      My name is Revanth Challa. I have been recently graduated with Masters degree in CIS from New England College,NH.I have done my Bachelors in ECE from CMRCET,Hyderabad,India.
     </p>
-    <h2>Tech Skills</h2>
+    <h2>Technical Skills</h2>
     <ul>
       <li>Java</li>
       <li>SQL</li>
