--- a/05-31-2023/assignment.html
+++ b/05-31-2023/assignment.html
@@ -20,7 +20,7 @@
         }
         
     }
-    console.log(profile.hobbies[4])
+    console.log(profile.hobbies[profile.hobbies.length-1])
     console.log(profile.technical_skills.front_end[1])
 </script>
 <img src="/Users/revanthreddychalla/Desktop/JS/REVANTH Small.jpeg" alt="photo.jpeg"
